[package]
name = "solana_smart_stack"
version = "0.1.0"
edition = "2021"
description = "Autonomous Jito Transaction Stack with gRPC Streaming"
publish = false

[dependencies]
# Web Portal Dependency
axum = "0.7"

# Async Runtime & Concurrency
tokio = { version = "1.35", features = ["full", "tracing"] }
futures-util = "0.3.30"

# Solana Core Cryptography & RPC (Locked to 1.18 for strict stability)
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"

# Real-time Network Streaming (Locked to 1.14 to resolve proto and TLS struct conflicts)
yellowstone-grpc-client
yellowstone-grpc-proto

# External HTTP & Serialization
reqwest = { version = "0.12.0", default-features = false, features = ["json", "rustls-tls", "charset"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bincode = "1.3.3"
base64 = "0.22.0"
bs58 = "0.5.0"

# Environment, Error Handling & Observability
anyhow = "1.0.81"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
rand = "0.8.5"

# =========================================================
# PRODUCTION COMPILER PROFILES (LATENCY & SIZE OPTIMIZATIONS)
# =========================================================
[profile.release]
opt-level = 3          # Maximum speed optimization
lto = "fat"            # Link Time Optimization across all crates
codegen-units = 1      # Reduces parallel code generation in favor of execution speed
panic = "abort"        # Drops the stack unwinding payload to save binary weight
strip = true           # Removes debug symbols from the compiled executable to reduce size
